js/src/tests/test262/built-ins/Promise/reject/not-a-constructor.js
assert
.
sameValue
(
isConstructor
(
Promise
.
reject
)
false
'
isConstructor
(
Promise
.
reject
)
must
return
false
'
)
;
assert
.
throws
(
TypeError
(
)
=
>
{
new
Promise
.
reject
(
)
;
}
)
;
reportCompare
(
0
0
)
;
